--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,15 @@
 apply plugin: 'java'
-apply plugin: 'findbugs'
-apply plugin: 'pmd'
 apply plugin: 'eclipse'
 
 repositories {
-    flatDir {
-       dirs 'C:/Users/IBM_ADMIN/Documents/TOOLS/pmd-bin-5.1.3/lib'
-       dirs 'C:/Users/IBM_ADMIN/Documents/TOOLS/Find Bugs/lib'
-    }
+	flatDir {
+		dirs 'C:/Users/IBM_ADMIN/Documents/workspaces/mygithub/document-processor/lib'
+	}
 }
 
 dependencies {
-	compile fileTree(dir: 'lib', include: '*.jar')
-	pmd ("net.sourceforge.pmd:pmd:5.1.3")
-	pmd fileTree(dir: 'C:/Users/IBM_ADMIN/Documents/TOOLS/pmd-bin-5.1.3/lib', include: '*.jar')
-	findbugs fileTree(dir: 'C:/Users/IBM_ADMIN/Documents/TOOLS/Find Bugs/lib', include: '*.jar')
-}
-
-pmd {
-	ignoreFailures = true
-}
-
-findbugs {
-	ignoreFailures = true
+	compile 'org.openoffice:bootstrapconnector'
+	compile 'org.openoffice:jodconverter-core:3.0-beta-3'
 }
 
 task listJars << {
