Relative path in repository path

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'eclipse'
 
 repositories {
 	flatDir {
-		dirs 'C:/Users/IBM_ADMIN/Documents/workspaces/mygithub/document-processor/lib'
+		dirs 'lib'
 	}
 }
 
